Update app title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <span>Welcome to Customer Management Portal</span>
+    <span>Customer Management Portal</span>
     <span class="toolbar-spacer"></span>
     <button class="m-1 btn btn-light btn-outline-primary" *ngIf="!isAuthenticated" (click)="oktaAuth.loginRedirect()"
       Button>Login
